--- a/larning.html
+++ b/larning.html
@@ -4,15 +4,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <titl>Exercise everyday</title>
+  <titl>
+    </title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-  <img src="logo.webp" alt="food picture">
-  <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste recusandae dolor ea eum quos magni, minus quasi
-    voluptates excepturi officia aperiam rem sunt. Omnis repudiandae voluptatum, dolore consequatur quibusdam expedita!
-  </P>
+  <section class="dinner-life">
+    <div class="dinner-one">
+      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem eius illum sapiente,
+        quas nobis vitae
+        autem veniam? Tempora, voluptates libero.</p>
+    </div>
+    <div class="dinner">
+      <img src="logo.webp" alt="food picture">
+      <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste recusandae dolor ea eum quos magni, minus quasi.
+      </P>
+    </div>
+  </section>
 </body>
 
 </html>
