--- a/larning.html
+++ b/larning.html
@@ -18,7 +18,10 @@
     </div>
     <div class="dinner">
       <img src="logo.webp" alt="food picture">
-      <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste recusandae dolor ea eum quos magni, minus quasi.
+      <P>
+      <h1>Lorem ipsum dolor sit amet</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste recusandae dolor
+      ea eum quos magni, minus
+      quasi.how to
       </P>
     </div>
   </section>
