--- a/larning.html
+++ b/larning.html
@@ -10,19 +10,47 @@
 </head>
 
 <body>
-  <section class="dinner-life">
-    <div class="dinner-one">
-      <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem eius illum sapiente,
-        quas nobis vitae
-        autem veniam? Tempora, voluptates libero.</p>
+  <section class="dinner-top">
+    <div class="dinner-life">
+      <div class="dinner-one">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Voluptatem eius illum sapiente,
+          quas nobis vitae
+          autem veniam? Tempora, voluptates look me libero.</p>
+      </div>
+      <div class="dinner">
+        <img src="logo.webp" alt="food picture">
+        <P>
+        <h1>Lorem ipsum dolor sit amet</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste recusandae
+        dolor
+        ea eum quos magni, minus
+        quasi.how to
+        </P>
+      </div>
     </div>
-    <div class="dinner">
-      <img src="logo.webp" alt="food picture">
-      <P>
-      <h1>Lorem ipsum dolor sit amet</h1>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iste recusandae dolor
-      ea eum quos magni, minus
-      quasi.how to
-      </P>
+  </section>
+  <section class="content-full">
+    <div class="content">
+      <div content-one>
+        <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur a</p>
+      </div>
+      <div class="content-two">
+        <h2>How Lorem ipsum dolor, sit amet consectetur</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi culpa ab, perferendis, totam ad quam
+          voluptatum cupiditate autem praesentium amet suscipit quas dolor dolorum sit obcaecati beatae harum quidem
+          quos saepe qui ullam cum odio quisquam quis. Consequuntur, cumque sapiente?</p>
+      </div>
+    </div>
+    <div class="file">
+      <div class="file-one">
+        <P>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sapiente magnam voluptatem in omnis sed nemo?
+          Assumenda saepe explicabo nihil vero.</P>
+      </div>
+      <div class="file-two">
+        <h1>Lorem ipsum dolor sit amet.</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus facilis iure maiores dolores, minima
+          dolore doloremque! Magnam animi veritatis illo.</p>
+      </div>
     </div>
   </section>
 </body>
